--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Django==3.2.9
 django-heroku==0.3.1
 django-livereload-server==0.3.2
 django-on-heroku==1.1.2
+gunicorn==20.1.0
 psycopg2==2.9.1
 psycopg2-binary==2.9.1
 pycodestyle==2.8.0
